[tool.poetry]
name = "cesar"
version = "0.1.0"
description = "Implementação da cifra de cesar!"
authors = ["Clayton <clayton.almeida.campos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
